--- a/ingress/example-app-ingress.yaml
+++ b/ingress/example-app-ingress.yaml
@@ -4,6 +4,8 @@ metadata:
   name: example-app-ingress
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /$1
+    # e.g. Cookie JSESSIONID=8e5IWiIo4u9m6BfXZcylXdqRXx3BQvykFlrewc_w.le-app-869f98dd87-t4hhf
+    nginx.com/sticky-cookie-services: JSESSIONID
 spec:
   # kubectl get ingressclass/nginx -o=jsonpath='{.metadata.name}'
   ingressClassName: nginx
